--- a/style.css
+++ b/style.css
@@ -23,11 +23,9 @@ div#result {
     width: 60vw;
     margin: 20vh auto;
     background-color: #eee;
-    border: 1px solid black;
+    border: 1px solid teal;
     border-radius: 10px;
     padding: 10px;
     text-align: center;
     display: none;
 }
-
-/*jkhfjjcvm*/
